--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Welcome to Windows App Deployment</h1>
-    <p>This is a simple HTML page for deploying Windows applications.</p>
+    <p>This is a simple HTML page for deploying Windows applications For demo purpose only.</p>
 </body>
 
 </html>
